@@ -4,7 +4,6 @@ GenericName=Terminal
 Comment=Vintage Terminal
 Exec=vinterm %f
 Icon=vinterm
-Icon=/usr/share/icons/hicolor/scalable/apps/vinterm.svg
 Terminal=false
 Type=Application
 Categories=System;
