@@ -1,8 +1,7 @@
 # system libraries
-SDL = $(shell sdl-config --cflags > /dev/null 2> /dev/null; echo $$?)
-AO  = $(shell pkg-config --cflags ao > /dev/null 2> /dev/null; echo $$?)
-#X11 = no
-
+SDL    = $(shell sdl-config --cflags > /dev/null 2> /dev/null; echo $$?)
+AO     = $(shell pkg-config --cflags ao > /dev/null 2> /dev/null; echo $$?)
+CONFIG = $(shell pkg-config --cflags libconfig++ > /dev/null 2> /dev/null; echo $$?)
 
 # SDL libraries
 ifeq (${SDL},0)
@@ -22,7 +21,11 @@ endif
 
 # X11 libraries
 LDFLAGS += -lX11
-#ifeq (${X11},yes)
-#  CXXFLAGS += -I/usr/X11R6/include -D_X11
-#  LDFLAGS += -L/usr/X11R6/lib -lX11 -lutil
-#endif
+
+# libconfig++ library
+ifeq (${CONFIG},0)
+  CXXFLAGS += `pkg-config --cflags libconfig++` -DLIBCONFIG
+  LDFLAGS += `pkg-config --libs libconfig++`
+else
+  $(warning IMPORTANT: The libconfig++ library was not detected in the system. The installation will continue but the audible beep in the terminal will not be avaliable)
+endif
