@@ -4,6 +4,7 @@ Version 0.5.0
   - Copy/paste mouse support for terminal (still a little buggy)
   - Faster screen update on long text output
   - Window title update upon request from applications
+  - Added application icon to the WM menus
 
 Version 0.4.1
 -------------
